--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "http://www.rushtehrani.com.s3-website-us-west-2.amazonaws.com/"
 languageCode = "en-us"
 title="Rush Tehrani"
-theme="nofancy"
+theme="simple"
 
 [params]
     highlight="github"
