--- a/themes/simple/theme.toml
+++ b/themes/simple/theme.toml
@@ -1,4 +1,4 @@
-name = "nofancy"
+name = "simple"
 description = "a distraction-free hugo theme"
 license = "MIT"
 licenselink = "http://opensource.org/licenses/MIT"
