fix baseurl and cdn refs

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://rushtehrani.com/"
+baseurl = "https://www.rushtehrani.com/"
 languageCode = "en-us"
 title="Rush Tehrani"
 theme="simple"
