new post and SEO

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ enableRobotsTXT = true
 disqusShortname = "rushtehrani"
 
 [params]
-    highlight = "github"
+    highlight = "atom-one-dark"
 
 [author]
     email = "hello@rushtehrani.com"
