fix google analytics

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ disqusShortname = "rushtehrani"
     linkedin = "rushtehrani"
     facebook = "rustehrani"
     google = "RushTehrani"
-    gaID = "UA-54533300-1"
+    gatrackingid = "UA-54533300-1"
     twitter = "rushtehrani"
     domain = "rushtehrani.com"
 
